cmake_minimum_required(VERSION 3.15)

project("Recursion")

set (CMAKE_CXX_STANDARD 23)

add_executable(1_tail_recursion 1_tail_recursion.cpp)
add_executable(2_head_recursion 2_head_recursion.cpp)
add_executable(3_linear_recursion 3_linear_recursion.cpp)
add_executable(4_tree_recursion 4_tree_recursion.cpp)
add_executable(5_nested_recursion 5_nested_recursion.cpp)
add_executable(6_indirect_recursion_one 6_indirect_recursion_one.cpp)
add_executable(7_indirect_recursion_two 7_indirect_recursion_two.cpp)
add_executable(8_memoization 8_memoization.cpp)
